--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,19 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  padding: 20px;
+}
+
+#domain-container {
+  width: 30vw;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 20px;
+  box-shadow: 5px 10px 10px #636363;
+}
+
+h1 {
+  margin-bottom: 20px;
+  text-align: center;
+}
